# aicore0720

./: .env.example  .env.template  .gitignore  2025-07-18-this-session-is-being-continued-from-a-previous-co.txt  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v4.75.md  CLAUDEEDITOR_INTEGRATION_GUIDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_ANSWER.md  FINAL_CLEANUP.sh  INSTALLATION_COMPARISON.md  K2_CLAUDE_CODE_GUIDE.md  K2_MODE_SWITCH_GUIDE.md  LAUNCH_GUIDE.md  LICENSE  MANUS_DATA_COLLECTION_GUIDE.md  MIGRATION_COMPLETE.md  MODEL_COMMAND_GUIDE.md  MODEL_SWITCHING_COMPLETE_GUIDE.md  NEW_TOOLS_SUMMARY.md  PAYMENT_APPLICATION_GUIDE.md  PROJECT_STATS.md  PROJECT_STRUCTURE.md  PUSH_INSTRUCTIONS.md  README.md  README_NEW.md  README_STAGE_UPLOAD.md  RELEASE_NOTES_v4.7.2.md  UPLOAD_CHECKLIST.md  USER_SCENARIOS_TEST.md  accuracy_metrics.json  advanced_tool_intelligence_system.py  analyze_and_integrate_claudeditor.py  auto_generated_spec.md  auto_generated_tests.py  (+277 more)
api/: workflows_integration_api.py
backups/: VERSION_LOG.md  v4.7.2_dev_20250717_055959.html
claude_code_integration/: bidirectional_bridge.py  claudeditor_enhanced.py
claudeditor/: core_dependency_check.js  demo_config.json  index.html  package.json  start_claudeditor_demo.sh  todo.md
claudeditor_backup/: DIRECTORY_STRUCTURE.md  README.md  package-lock.json  vite.config.js
claudeditor_complete/: DEPLOYMENT_GUIDE.md  claude_code_tool_ui_revolution.md  deploy_to_aws.sh  (+33 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_manager.rs  mcp.rs
(+904 files in other folders)
